--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <script src="sketch.js" ;"style = border-top:200px; float:centre;"></script>
   
 
 </body></html>
