--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
             body{
                   background-color: #0e0e0e;
             }
+            .reaction{
+                  display: block;
+                  margin-left: auto;
+                  margin-right: auto;
+                   width: 1000%;
       
       </style>
 
   </head>
   <body>
-    <script src="sketch.js" ;"style = border-top:200px; float:centre;"></script>
+        <div class="reaction">
+    <script src="sketch.js"></script>
+        </div>
   
 
 </body></html>
