--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
+      <style>
+            body{
+            background-color: #0e0e0e;
+            }
+      </style>
 
   </head>
   <body>
+        <h1 "style = color: white;">Reaction Diffusion Algorithm</h1>
+        <h "style = color: white;"> by Karl Sims</h3>
+      
     <script src="sketch.js"></script>
   
 
