--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
             body{
             background-color: #0e0e0e;
             }
+            .text{
+            color:white;
+            }
       </style>
 
   </head>
   <body>
-        <h1 "style = color: white;">Reaction Diffusion Algorithm</h1>
-        <h "style = color: white;"> by Karl Sims</h3>
+        <h1 class= "text"> Reaction Diffusion Algorithm</h1>
+        <h3 class= "text"> by Karl Sims</h3>
       
     <script src="sketch.js"></script>
   
