--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
             background-color: #0e0e0e;
             }
             .text{
-            color:white;
+            color: #FFFFFF;
+            border-bottom: 50px;
             }
       </style>
 
