--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       <style>
             body{
             background-color: #0e0e0e;
+                  margin-left:40%;
+                  margin-right:40%;
             }
             .text{
             color: #FFFFFF;
