--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             background-color: #0e0e0e;
                   margin-left:40%;
                   margin-right:40%;
+                  margin-top:25%;
             }
             .text{
             color: #FFFFFF;
