--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
     <script src="sketch.js"></script>
         
-         <h6 class= "text1"> coded by Anaghaa Chakrapani/h6>
+         <h6 class= "text1"> coded by Anaghaa Chakrapani</h6>
   
 
 </body></html>
