--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             border-bottom: 50px;
             }
             
-             .tex1{
+             .text1{
             color: #FFFFFF;
             border-bottom: 50px;
              font-style:italic;
